# p5

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: QualityCheck-main.yml  QualityCheck-pr.yml  QualityCheck.yml  TestP5.yml  ruff.yml
p5/: p5.py
test/: test_p5.py
