[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [{name = "Cerabbite"}]
dependencies = [
  "requests",
]
description = "A simple CLI tool to create p5.js projects"
license = {file = "LICENSE"}
name = "p5"
version = "2024.4.0"

[project.scripts]
p5 = "p5.p5:main"

[tool.black]
line-length = 90

[tool.ruff]
line-length = 90
lint.extend-select = ["C4", "I", "SIM"]
