[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [{name = "Cerabbite"}]
dependencies = ["requests>=2.31.0"]
description = "A simple CLI tool to create p5.js projects"
# dev-dependencies = ["pytest-cov>=5.0.0"]
license = {file = "LICENSE"}
name = "p5"
version = "2024.4.2"

[project.scripts]
p5 = "p5.p5:main"

[tool.black]
line-length = 90

[tool.ruff]
line-length = 90
lint.extend-select = ["C4", "I", "SIM"]
